        PR c++/27952         * cp-tree.h (xref_basetypes): Return bool instead of void.         * decl.c (xref_basetypes): Adjust definition. Return false         if the class bases are invalid.         * parser.c (cp_parser_class_head): Check the return value         from xref_basetypes.

* g++.dg/inherit/virtual1.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117839 138bc75d-0d04-0410-961f-82ee72b054a4